// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/admin_console/admin_button_outline/AdminButtonOutline should match snapshot with children 1`] = `
<button
  className="AdminButtonOutline btn admin-btn-default"
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  Test children
</button>
`;

exports[`components/admin_console/admin_button_outline/AdminButtonOutline should match snapshot with className is not provided in scss file 1`] = `
<button
  className="AdminButtonOutline btn btn-default"
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  Test children
</button>
`;

exports[`components/admin_console/admin_button_outline/AdminButtonOutline should match snapshot with prop disable false 1`] = `
<button
  className="AdminButtonOutline btn admin-btn-default"
  disabled={false}
  onClick={[MockFunction]}
  type="button"
/>
`;

exports[`components/admin_console/admin_button_outline/AdminButtonOutline should match snapshot with prop disable true 1`] = `
<button
  className="AdminButtonOutline btn admin-btn-default"
  disabled={true}
  onClick={[MockFunction]}
  type="button"
/>
`;
